--- a/app/assets/stylesheets/partials/_variables.css.sass
+++ b/app/assets/stylesheets/partials/_variables.css.sass
@@ -4,11 +4,16 @@ $margin: 20px
 $page-header-height: 48px
 $page-header-height-tiny: 38px
 
-$blind-collapsed-height: 45px
-$blind-collapsed-height-tiny: 35px
+$blind-collapsed-height: 48px
+$blind-collapsed-height-tiny: 38px
 
 $blind-banner-height: 450px
 $blind-banner-height-tiny: 150px
+
+
+
+$page-font-size: 15px
+$page-line-height: 20px
 
 
 
